--- a/compat_makeover/lang/zh_tw.json
+++ b/compat_makeover/lang/zh_tw.json
@@ -3,14 +3,14 @@
   "block.compat_makeover.ancient_oak_ladder": "古橡木梯子",
   "block.compat_makeover.ancient_oak_bookshelf": "古橡木書架",
   "block.compat_makeover.ancient_oak_post": "古橡木桿",
-  "block.compat_makeover.stripped_ancient_oak_post": "去皮古橡木桿",
+  "block.compat_makeover.stripped_ancient_oak_post": "剝皮古橡木桿",
   "block.compat_makeover.ancient_oak_hedge": "古橡木葉籬",
   "block.compat_makeover.ancient_oak_leaf_carpet": "古橡木樹葉地毯",
   "block.compat_makeover.ancient_oak_chest": "古橡木箱子",
   "block.compat_makeover.ancient_oak_trapped_chest": "古橡木陷阱箱",
   "block.compat_makeover.ancient_oak_beehive": "古橡木蜂箱",
   "block.compat_makeover.ancient_oak_cabinet": "古橡木廚櫃",
-  "block.compat_makeover.vertical_ancient_oak_planks": "豎紋古橡木木板",
+  "block.compat_makeover.vertical_ancient_oak_planks": "豎紋古橡木木材",
   "block.compat_makeover.ancient_oak_table": "古橡木桌子",
   "block.compat_makeover.ancient_oak_boards": "古橡木寬木板",
   "block.compat_makeover.ancient_oak_railing": "古橡木扶手",
@@ -20,14 +20,14 @@
   "block.compat_makeover.blighted_balsa_ladder": "受感染的輕木梯子",
   "block.compat_makeover.blighted_balsa_bookshelf": "受感染的輕木書架",
   "block.compat_makeover.blighted_balsa_post": "受感染的輕木木桿",
-  "block.compat_makeover.stripped_blighted_balsa_post": "去皮受感染的輕木木桿",
+  "block.compat_makeover.stripped_blighted_balsa_post": "剝皮受感染的輕木木桿",
   "block.compat_makeover.blighted_balsa_hedge": "受感染的輕木葉籬",
   "block.compat_makeover.blighted_balsa_leaf_carpet": "受感染的輕木樹葉地毯",
   "block.compat_makeover.blighted_balsa_chest": "受感染的輕木箱子",
   "block.compat_makeover.blighted_balsa_trapped_chest": "受感染的輕木陷阱箱",
   "block.compat_makeover.blighted_balsa_beehive": "受感染的輕木蜂箱",
   "block.compat_makeover.blighted_balsa_cabinet": "受感染的輕木廚櫃",
-  "block.compat_makeover.vertical_blighted_balsa_planks": "豎紋受感染的輕木木板",
+  "block.compat_makeover.vertical_blighted_balsa_planks": "豎紋受感染的輕木木材",
   "block.compat_makeover.blighted_balsa_table": "受感染的輕木桌子",
   "block.compat_makeover.blighted_balsa_boards": "受感染的輕木寬木板",
   "block.compat_makeover.blighted_balsa_railing": "受感染的輕木扶手",
@@ -37,14 +37,14 @@
   "block.compat_makeover.swamp_cypress_ladder": "沼澤柏木梯子",
   "block.compat_makeover.swamp_cypress_bookshelf": "沼澤柏木書架",
   "block.compat_makeover.swamp_cypress_post": "沼澤柏木木桿",
-  "block.compat_makeover.stripped_swamp_cypress_post": "去皮沼澤柏木木桿",
+  "block.compat_makeover.stripped_swamp_cypress_post": "剝皮沼澤柏木木桿",
   "block.compat_makeover.swamp_cypress_hedge": "沼澤柏木葉籬",
   "block.compat_makeover.swamp_cypress_leaf_carpet": "沼澤柏木樹葉地毯",
   "block.compat_makeover.swamp_cypress_chest": "沼澤柏木箱子",
   "block.compat_makeover.swamp_cypress_trapped_chest": "沼澤柏木陷阱箱",
   "block.compat_makeover.swamp_cypress_beehive": "沼澤柏木蜂箱",
   "block.compat_makeover.swamp_cypress_cabinet": "沼澤柏木廚櫃",
-  "block.compat_makeover.vertical_swamp_cypress_planks": "豎紋沼澤柏木木板",
+  "block.compat_makeover.vertical_swamp_cypress_planks": "豎紋沼澤柏木木材",
   "block.compat_makeover.swamp_cypress_table": "沼澤柏木桌子",
   "block.compat_makeover.swamp_cypress_boards": "沼澤柏木寬木板",
   "block.compat_makeover.swamp_cypress_railing": "沼澤柏木扶手",
@@ -54,55 +54,55 @@
   "block.compat_makeover.willow_ladder": "柳木梯子",
   "block.compat_makeover.willow_bookshelf": "柳木書架",
   "block.compat_makeover.willow_post": "柳木木桿",
-  "block.compat_makeover.stripped_willow_post": "去皮柳木木桿",
+  "block.compat_makeover.stripped_willow_post": "剝皮柳木木桿",
   "block.compat_makeover.willow_hedge": "柳木葉籬",
   "block.compat_makeover.willow_leaf_carpet": "柳木樹葉地毯",
   "block.compat_makeover.willow_chest": "柳木箱子",
   "block.compat_makeover.willow_trapped_chest": "柳木陷阱箱",
   "block.compat_makeover.willow_beehive": "柳木蜂箱",
   "block.compat_makeover.willow_cabinet": "柳木廚櫃",
-  "block.compat_makeover.vertical_willow_planks": "豎紋柳木木板",
+  "block.compat_makeover.vertical_willow_planks": "豎紋柳木木材",
   "block.compat_makeover.willow_table": "柳木桌子",
   "block.compat_makeover.willow_boards": "柳木寬木板",
   "block.compat_makeover.willow_railing": "柳木扶手",
   "block.compat_makeover.ww_willow_boards": "柳木寬木板",
   "block.compat_makeover.willow_leaf_pile": "柳木樹葉堆",
-  "block.compat_makeover.mesmerite_bricks": "磨制迷魂石磚",
-  "block.compat_makeover.mesmerite_bricks_slab": "磨制迷魂石磚半磚",
-  "block.compat_makeover.mesmerite_bricks_wall": "磨制迷魂石磚墻",
-  "block.compat_makeover.mesmerite_bricks_vertical_slab": "磨制迷魂石磚豎直半磚",
-  "block.compat_makeover.mesmerite_pillar": "磨制迷魂石柱",
-  "block.compat_makeover.polished_mesmerite_vertical_slab": "磨制迷魂石豎直半磚",
+  "block.compat_makeover.mesmerite_bricks": "磨製迷魂石磚",
+  "block.compat_makeover.mesmerite_bricks_slab": "磨製迷魂石磚半磚",
+  "block.compat_makeover.mesmerite_bricks_wall": "磨製迷魂石磚墻",
+  "block.compat_makeover.mesmerite_bricks_vertical_slab": "磨製迷魂石磚豎直半磚",
+  "block.compat_makeover.mesmerite_pillar": "磨製迷魂石柱",
+  "block.compat_makeover.polished_mesmerite_vertical_slab": "磨製迷魂石豎直半磚",
   "block.compat_makeover.mesmerite_vertical_slab": "迷魂石豎直半磚",
-  "block.compat_makeover.chiseled_mesmerite_bricks": "雕紋磨制迷魂石",
-  "block.compat_makeover.mesmerite_bricks_stairs": "磨制迷魂石樓梯",
-  "block.compat_makeover.polished_illunite": "磨制伊魯尼特塊",
-  "block.compat_makeover.polished_illunite_stairs": "磨制伊魯尼特塊樓梯",
-  "block.compat_makeover.polished_illunite_slab": "磨制伊魯尼特塊半磚",
-  "block.compat_makeover.polished_illunite_vertical_slab": "磨制伊魯尼特塊豎直半磚",
-  "block.compat_makeover.chiseled_polished_illunite": "雕紋磨制伊魯尼特塊",
-  "block.compat_makeover.polished_illunite_bricks": "磨制伊魯尼特磚塊",
-  "block.compat_makeover.polished_illunite_brick_stairs": "磨制伊魯尼特磚塊樓梯",
-  "block.compat_makeover.polished_illunite_brick_slab": "磨制伊魯尼特磚塊半磚",
-  "block.compat_makeover.polished_illunite_brick_vertical_slab": "磨制伊魯尼特磚塊豎直半磚",
-  "block.compat_makeover.polished_illunite_brick_wall": "磨制伊魯尼特磚塊墻",
-  "block.compat_makeover.cracked_polished_illunite_bricks": "裂紋磨制伊魯尼特磚塊磚",
+  "block.compat_makeover.chiseled_mesmerite_bricks": "雕紋磨製迷魂石",
+  "block.compat_makeover.mesmerite_bricks_stairs": "磨製迷魂石樓梯",
+  "block.compat_makeover.polished_illunite": "磨製伊魯尼特塊",
+  "block.compat_makeover.polished_illunite_stairs": "磨製伊魯尼特塊樓梯",
+  "block.compat_makeover.polished_illunite_slab": "磨製伊魯尼特塊半磚",
+  "block.compat_makeover.polished_illunite_vertical_slab": "磨製伊魯尼特塊豎直半磚",
+  "block.compat_makeover.chiseled_polished_illunite": "雕紋磨製伊魯尼特塊",
+  "block.compat_makeover.polished_illunite_bricks": "磨製伊魯尼特磚塊",
+  "block.compat_makeover.polished_illunite_brick_stairs": "磨製伊魯尼特磚塊樓梯",
+  "block.compat_makeover.polished_illunite_brick_slab": "磨製伊魯尼特磚塊半磚",
+  "block.compat_makeover.polished_illunite_brick_vertical_slab": "磨製伊魯尼特磚塊豎直半磚",
+  "block.compat_makeover.polished_illunite_brick_wall": "磨製伊魯尼特磚塊墻",
+  "block.compat_makeover.cracked_polished_illunite_bricks": "裂紋磨製伊魯尼特磚塊磚",
   "block.compat_makeover.red_terracotta_bricks_vertical_slab": "紅色陶瓦磚豎直半磚",
   "block.compat_makeover.orange_terracotta_bricks_vertical_slab": "橙色陶瓦磚豎直半磚",
   "block.compat_makeover.yellow_terracotta_bricks_vertical_slab": "黃色陶瓦磚豎直半磚",
   "block.compat_makeover.green_terracotta_bricks_vertical_slab": "綠色陶瓦磚豎直半磚",
   "block.compat_makeover.blue_terracotta_bricks_vertical_slab": "藍色陶瓦磚豎直半磚",
   "block.compat_makeover.cyan_terracotta_bricks_vertical_slab": "青色陶瓦磚豎直半磚",
-  "block.compat_makeover.light_blue_terracotta_bricks_vertical_slab": "淡藍色陶瓦磚豎直半磚",
+  "block.compat_makeover.light_blue_terracotta_bricks_vertical_slab": "淺藍色陶瓦磚豎直半磚",
   "block.compat_makeover.purple_terracotta_bricks_vertical_slab": "紫色陶瓦磚豎直半磚",
   "block.compat_makeover.pink_terracotta_bricks_vertical_slab": "粉紅色陶瓦磚豎直半磚",
   "block.compat_makeover.black_terracotta_bricks_vertical_slab": "黑色陶瓦磚豎直半磚",
-  "block.compat_makeover.magenta_terracotta_bricks_vertical_slab": "品紅色陶瓦磚豎直半磚",
+  "block.compat_makeover.magenta_terracotta_bricks_vertical_slab": "洋紅色陶瓦磚豎直半磚",
   "block.compat_makeover.gray_terracotta_bricks_vertical_slab": "灰色陶瓦磚豎直半磚",
   "block.compat_makeover.terracotta_bricks_vertical_slab": "陶瓦磚豎直半磚",
   "block.compat_makeover.white_terracotta_bricks_vertical_slab": "白色陶瓦磚豎直半磚",
-  "block.compat_makeover.lime_terracotta_bricks_vertical_slab": "黃綠色陶瓦磚豎直半磚",
-  "block.compat_makeover.light_gray_terracotta_bricks_vertical_slab": "淡灰色陶瓦磚豎直半磚",
+  "block.compat_makeover.lime_terracotta_bricks_vertical_slab": "淺綠色陶瓦磚豎直半磚",
+  "block.compat_makeover.light_gray_terracotta_bricks_vertical_slab": "淺灰色陶瓦磚豎直半磚",
   "block.compat_makeover.brown_terracotta_bricks_vertical_slab": "棕色陶瓦磚豎直半磚",
   "block.compat_makeover.brown_mushroom_brick_vertical_slab": "棕色蘑菇磚豎直半磚",
   "block.compat_makeover.red_mushroom_brick_vertical_slab": "紅色蘑菇磚豎直半磚",
@@ -111,10 +111,10 @@
   "block.compat_makeover.green_glowshroom_brick_vertical_slab": "綠色發光菇磚豎直半磚",
   "block.compat_makeover.glowshroom_stem_brick_vertical_slab": "發光菇柄磚豎直半磚",
   "block.compat_makeover.mushroom_stem_brick_vertical_slab": "蘑菇柄磚豎直半磚",
-  "block.compat_makeover.dried_peat_brick_vertical_slab": "幹泥炭土磚豎直半磚",
-  "block.compat_makeover.cracked_dried_peat_brick_vertical_slab": "裂紋幹泥炭土磚豎直半磚",
-  "block.compat_makeover.mossy_dried_peat_brick_vertical_slab": "苔癬幹泥炭土磚豎直半磚",
-  "block.compat_makeover.blighted_cobblestone_vertical_slab": "受感染的圓石豎直半磚",
+  "block.compat_makeover.dried_peat_brick_vertical_slab": "乾泥炭土磚豎直半磚",
+  "block.compat_makeover.cracked_dried_peat_brick_vertical_slab": "裂紋乾泥炭土磚豎直半磚",
+  "block.compat_makeover.mossy_dried_peat_brick_vertical_slab": "苔癬乾泥炭土磚豎直半磚",
+  "block.compat_makeover.blighted_cobblestone_vertical_slab": "受感染的鵝卵石豎直半磚",
   "block.compat_makeover.blighted_stone_brick_vertical_slab": "受感染的石磚豎直半磚",
   "block.compat_makeover.fairy_ring_mushroom_brick": "仙環菇磚",
   "block.compat_makeover.fairy_ring_mushroom_brick_stairs": "仙環菇磚樓梯",
