--- a/compat_makeover/lang/zh_tw.json
+++ b/compat_makeover/lang/zh_tw.json
@@ -69,7 +69,7 @@
   "block.compat_makeover.willow_leaf_pile": "柳木樹葉堆",
   "block.compat_makeover.mesmerite_bricks": "磨製迷魂石磚",
   "block.compat_makeover.mesmerite_bricks_slab": "磨製迷魂石磚半磚",
-  "block.compat_makeover.mesmerite_bricks_wall": "磨製迷魂石磚墻",
+  "block.compat_makeover.mesmerite_bricks_wall": "磨製迷魂石磚牆",
   "block.compat_makeover.mesmerite_bricks_vertical_slab": "磨製迷魂石磚豎直半磚",
   "block.compat_makeover.mesmerite_pillar": "磨製迷魂石柱",
   "block.compat_makeover.polished_mesmerite_vertical_slab": "磨製迷魂石豎直半磚",
@@ -85,7 +85,7 @@
   "block.compat_makeover.polished_illunite_brick_stairs": "磨製伊魯尼特磚塊樓梯",
   "block.compat_makeover.polished_illunite_brick_slab": "磨製伊魯尼特磚塊半磚",
   "block.compat_makeover.polished_illunite_brick_vertical_slab": "磨製伊魯尼特磚塊豎直半磚",
-  "block.compat_makeover.polished_illunite_brick_wall": "磨製伊魯尼特磚塊墻",
+  "block.compat_makeover.polished_illunite_brick_wall": "磨製伊魯尼特磚塊牆",
   "block.compat_makeover.cracked_polished_illunite_bricks": "裂紋磨製伊魯尼特磚塊磚",
   "block.compat_makeover.red_terracotta_bricks_vertical_slab": "紅色陶瓦磚豎直半磚",
   "block.compat_makeover.orange_terracotta_bricks_vertical_slab": "橙色陶瓦磚豎直半磚",
@@ -120,40 +120,40 @@
   "block.compat_makeover.fairy_ring_mushroom_brick_stairs": "仙環菇磚樓梯",
   "block.compat_makeover.fairy_ring_mushroom_brick_slab": "仙環菇磚半磚",
   "block.compat_makeover.fairy_ring_mushroom_brick_vertical_slab": "仙環菇磚豎直半磚",
-  "block.compat_makeover.fairy_ring_mushroom_brick_wall": "仙環菇磚墻",
+  "block.compat_makeover.fairy_ring_mushroom_brick_wall": "仙環菇磚牆",
   "block.compat_makeover.bop_glowshroom_brick": "夜光菇磚",
   "block.compat_makeover.bop_glowshroom_brick_stairs": "夜光菇磚樓梯",
   "block.compat_makeover.bop_glowshroom_brick_slab": "夜光菇磚半磚",
   "block.compat_makeover.bop_glowshroom_brick_vertical_slab": "夜光菇磚豎直半磚",
-  "block.compat_makeover.bop_glowshroom_brick_wall": "夜光菇磚墻",
+  "block.compat_makeover.bop_glowshroom_brick_wall": "夜光菇磚牆",
   "block.compat_makeover.dd_glowshroom_brick": "熒光菇磚",
   "block.compat_makeover.dd_glowshroom_brick_stairs": "熒光菇磚樓梯",
   "block.compat_makeover.dd_glowshroom_brick_slab": "熒光菇磚半磚",
   "block.compat_makeover.dd_glowshroom_brick_vertical_slab": "熒光菇磚豎直半磚",
-  "block.compat_makeover.dd_glowshroom_brick_wall": "熒光菇磚墻",
+  "block.compat_makeover.dd_glowshroom_brick_wall": "熒光菇磚牆",
   "block.compat_makeover.quark_glowshroom_brick": "發光菇磚",
   "block.compat_makeover.quark_glowshroom_brick_stairs": "發光菇磚樓梯",
   "block.compat_makeover.quark_glowshroom_brick_slab": "發光菇磚半磚",
   "block.compat_makeover.quark_glowshroom_brick_vertical_slab": "發光菇磚豎直半磚",
-  "block.compat_makeover.quark_glowshroom_brick_wall": "發光菇磚墻",
+  "block.compat_makeover.quark_glowshroom_brick_wall": "發光菇磚牆",
   "block.compat_makeover.toadstool_brick": "傘菌磚",
   "block.compat_makeover.toadstool_brick_stairs": "傘菌磚樓梯",
   "block.compat_makeover.toadstool_brick_slab": "傘菌磚半磚",
   "block.compat_makeover.toadstool_brick_vertical_slab": "傘菌磚豎直半磚",
-  "block.compat_makeover.toadstool_brick_wall": "傘菌磚墻",
+  "block.compat_makeover.toadstool_brick_wall": "傘菌磚牆",
   "block.compat_makeover.fairy_ring_mushroom_stem_brick": "仙環菇柄磚",
   "block.compat_makeover.fairy_ring_mushroom_stem_brick_stairs": "仙環菇柄磚樓梯",
   "block.compat_makeover.fairy_ring_mushroom_stem_brick_slab": "仙環菇柄磚半磚",
   "block.compat_makeover.fairy_ring_mushroom_stem_brick_vertical_slab": "仙環菇柄磚豎直半磚",
-  "block.compat_makeover.fairy_ring_mushroom_stem_brick_wall": "仙環菇柄磚墻",
+  "block.compat_makeover.fairy_ring_mushroom_stem_brick_wall": "仙環菇柄磚牆",
   "block.compat_makeover.quark_glowshroom_stem_brick": "發光菇柄磚",
   "block.compat_makeover.quark_glowshroom_stem_brick_stairs": "發光菇柄磚樓梯",
   "block.compat_makeover.quark_glowshroom_stem_brick_slab": "發光菇柄磚半磚",
   "block.compat_makeover.quark_glowshroom_stem_brick_vertical_slab": "發光菇柄磚豎直半磚",
-  "block.compat_makeover.quark_glowshroom_stem_brick_wall": "發光菇柄磚墻",
+  "block.compat_makeover.quark_glowshroom_stem_brick_wall": "發光菇柄磚牆",
   "block.compat_makeover.dd_glowshroom_stem_brick": "熒光菇柄磚",
   "block.compat_makeover.dd_glowshroom_stem_brick_stairs": "熒光菇柄磚樓梯",
   "block.compat_makeover.dd_glowshroom_stem_brick_slab": "熒光菇柄磚半磚",
   "block.compat_makeover.dd_glowshroom_stem_brick_vertical_slab": "熒光菇柄磚豎直半磚",
-  "block.compat_makeover.dd_glowshroom_stem_brick_wall": "熒光菇柄磚墻"
+  "block.compat_makeover.dd_glowshroom_stem_brick_wall": "熒光菇柄磚牆"
 }
