--- a/compatoplenty/lang/zh_tw.json
+++ b/compatoplenty/lang/zh_tw.json
@@ -1,9 +1,9 @@
 {
-  "block.compatoplenty.cherry_vertical_slab": "櫻桃木豎直台階",
+  "block.compatoplenty.cherry_vertical_slab": "櫻桃木豎直半磚",
   "block.compatoplenty.cherry_ladder": "櫻桃木梯子",
   "block.compatoplenty.cherry_bookshelf": "櫻桃木書架",
   "block.compatoplenty.cherry_post": "櫻桃木桿",
-  "block.compatoplenty.stripped_cherry_post": "去皮櫻桃木桿",
+  "block.compatoplenty.stripped_cherry_post": "剝皮櫻桃木桿",
   "block.compatoplenty.white_cherry_hedge": "白色櫻桃樹葉籬",
   "block.compatoplenty.pink_cherry_hedge": "粉紅色櫻桃樹葉籬",
   "block.compatoplenty.white_cherry_leaf_carpet": "白色櫻桃樹葉地毯",
@@ -15,13 +15,13 @@
   "block.compatoplenty.cherry_beehive": "櫻桃木蜂箱",
   "block.compatoplenty.cherry_cabinet": "櫻桃木廚櫃",
   "block.compatoplenty.cherry_table": "櫻桃木桌",
-  "block.compatoplenty.vertical_cherry_planks": "豎紋櫻桃木板",
+  "block.compatoplenty.vertical_cherry_planks": "豎紋櫻桃木材",
   "block.compatoplenty.cherry_boards": "櫻桃直木板",
-  "block.compatoplenty.jacaranda_vertical_slab": "藍花楹木豎直台階",
+  "block.compatoplenty.jacaranda_vertical_slab": "藍花楹木豎直半磚",
   "block.compatoplenty.jacaranda_ladder": "藍花楹木梯子",
   "block.compatoplenty.jacaranda_bookshelf": "藍花楹木書架",
   "block.compatoplenty.jacaranda_post": "藍花楹木桿",
-  "block.compatoplenty.stripped_jacaranda_post": "去皮藍花楹木桿",
+  "block.compatoplenty.stripped_jacaranda_post": "剝皮藍花楹木桿",
   "block.compatoplenty.jacaranda_hedge": "藍花楹樹葉籬",
   "block.compatoplenty.jacaranda_leaf_carpet": "藍花楹樹葉地毯",
   "block.compatoplenty.jacaranda_leaf_pile": "藍花楹樹葉堆",
@@ -30,13 +30,13 @@
   "block.compatoplenty.jacaranda_beehive": "藍花楹木蜂箱",
   "block.compatoplenty.jacaranda_cabinet": "藍花楹木廚櫃",
   "block.compatoplenty.jacaranda_table": "藍花楹木桌",
-  "block.compatoplenty.vertical_jacaranda_planks": "豎紋藍花楹木板",
+  "block.compatoplenty.vertical_jacaranda_planks": "豎紋藍花楹木材",
   "block.compatoplenty.jacaranda_boards": "藍花楹木直木板",
-  "block.compatoplenty.fir_vertical_slab": "杉木豎直台階",
+  "block.compatoplenty.fir_vertical_slab": "杉木豎直半磚",
   "block.compatoplenty.fir_ladder": "杉木梯子",
   "block.compatoplenty.fir_bookshelf": "杉木書架",
   "block.compatoplenty.fir_post": "杉木桿",
-  "block.compatoplenty.stripped_fir_post": "去皮杉木桿",
+  "block.compatoplenty.stripped_fir_post": "剝皮杉木桿",
   "block.compatoplenty.fir_hedge": "杉樹樹葉籬",
   "block.compatoplenty.fir_leaf_carpet": "杉樹樹葉地毯",
   "block.compatoplenty.fir_leaf_pile": "杉樹樹葉堆",
@@ -45,13 +45,13 @@
   "block.compatoplenty.fir_beehive": "杉木蜂箱",
   "block.compatoplenty.fir_cabinet": "杉木廚櫃",
   "block.compatoplenty.fir_table": "杉木桌",
-  "block.compatoplenty.vertical_fir_planks": "豎紋杉木木板",
+  "block.compatoplenty.vertical_fir_planks": "豎紋杉木木材",
   "block.compatoplenty.fir_boards": "杉木直木板",
-  "block.compatoplenty.redwood_vertical_slab": "紅木豎直台階",
+  "block.compatoplenty.redwood_vertical_slab": "紅木豎直半磚",
   "block.compatoplenty.redwood_ladder": "紅木梯子",
   "block.compatoplenty.redwood_bookshelf": "紅木書架",
   "block.compatoplenty.redwood_post": "紅木桿",
-  "block.compatoplenty.stripped_redwood_post": "去皮紅木桿",
+  "block.compatoplenty.stripped_redwood_post": "剝皮紅木桿",
   "block.compatoplenty.redwood_hedge": "紅木樹葉籬",
   "block.compatoplenty.redwood_leaf_carpet": "紅木樹葉地毯",
   "block.compatoplenty.redwood_leaf_pile": "紅木樹葉堆",
@@ -60,13 +60,13 @@
   "block.compatoplenty.redwood_beehive": "紅木蜂箱",
   "block.compatoplenty.redwood_cabinet": "紅木廚櫃",
   "block.compatoplenty.redwood_table": "紅木桌",
-  "block.compatoplenty.vertical_redwood_planks": "豎紋紅木木板",
+  "block.compatoplenty.vertical_redwood_planks": "豎紋紅木木材",
   "block.compatoplenty.redwood_boards": "紅木直木板",
-  "block.compatoplenty.mahogany_vertical_slab": "桃花心木豎直台階",
+  "block.compatoplenty.mahogany_vertical_slab": "桃花心木豎直半磚",
   "block.compatoplenty.mahogany_ladder": "桃花心木梯子",
   "block.compatoplenty.mahogany_bookshelf": "桃花心木書架",
   "block.compatoplenty.mahogany_post": "桃花心木桿",
-  "block.compatoplenty.stripped_mahogany_post": "去皮桃花心木桿",
+  "block.compatoplenty.stripped_mahogany_post": "剝皮桃花心木桿",
   "block.compatoplenty.mahogany_hedge": "桃花心樹葉籬",
   "block.compatoplenty.mahogany_leaf_carpet": "桃花心樹葉地毯",
   "block.compatoplenty.mahogany_leaf_pile": "桃花心樹葉堆",
@@ -75,13 +75,13 @@
   "block.compatoplenty.mahogany_beehive": "桃花心木蜂箱",
   "block.compatoplenty.mahogany_cabinet": "桃花心木廚櫃",
   "block.compatoplenty.mahogany_table": "桃花心木桌",
-  "block.compatoplenty.vertical_mahogany_planks": "豎紋桃花心木板",
+  "block.compatoplenty.vertical_mahogany_planks": "豎紋桃花心木材",
   "block.compatoplenty.mahogany_boards": "桃花心直木板",
-  "block.compatoplenty.willow_vertical_slab": "柳木豎直台階",
+  "block.compatoplenty.willow_vertical_slab": "柳木豎直半磚",
   "block.compatoplenty.willow_ladder": "柳木梯子",
   "block.compatoplenty.willow_bookshelf": "柳木書架",
   "block.compatoplenty.willow_post": "柳木桿",
-  "block.compatoplenty.stripped_willow_post": "去皮柳木桿",
+  "block.compatoplenty.stripped_willow_post": "剝皮柳木桿",
   "block.compatoplenty.willow_hedge": "柳樹樹葉籬",
   "block.compatoplenty.willow_leaf_carpet": "柳樹樹葉地毯",
   "block.compatoplenty.willow_leaf_pile": "柳樹樹葉堆",
@@ -90,13 +90,13 @@
   "block.compatoplenty.willow_beehive": "柳木蜂箱",
   "block.compatoplenty.willow_cabinet": "柳木廚櫃",
   "block.compatoplenty.willow_table": "柳木桌",
-  "block.compatoplenty.vertical_willow_planks": "豎紋柳木木板",
+  "block.compatoplenty.vertical_willow_planks": "豎紋柳木木材",
   "block.compatoplenty.willow_boards": "柳木直木板",
-  "block.compatoplenty.magic_vertical_slab": "魔法木豎直台階",
+  "block.compatoplenty.magic_vertical_slab": "魔法木豎直半磚",
   "block.compatoplenty.magic_ladder": "魔法木梯子",
   "block.compatoplenty.magic_bookshelf": "魔法木書架",
   "block.compatoplenty.magic_post": "魔法木桿",
-  "block.compatoplenty.stripped_magic_post": "去皮魔法木桿",
+  "block.compatoplenty.stripped_magic_post": "剝皮魔法木桿",
   "block.compatoplenty.magic_hedge": "魔法樹葉籬",
   "block.compatoplenty.magic_leaf_carpet": "魔法樹葉地毯",
   "block.compatoplenty.magic_leaf_pile": "魔法樹葉堆",
@@ -105,13 +105,13 @@
   "block.compatoplenty.magic_beehive": "魔法木蜂箱",
   "block.compatoplenty.magic_cabinet": "魔法木廚櫃",
   "block.compatoplenty.magic_table": "魔法木桌",
-  "block.compatoplenty.vertical_magic_planks": "豎紋魔法木板",
+  "block.compatoplenty.vertical_magic_planks": "豎紋魔法木材",
   "block.compatoplenty.magic_boards": "魔法直木板",
-  "block.compatoplenty.palm_vertical_slab": "棕櫚木豎直台階",
+  "block.compatoplenty.palm_vertical_slab": "棕櫚木豎直半磚",
   "block.compatoplenty.palm_ladder": "棕櫚木梯子",
   "block.compatoplenty.palm_bookshelf": "棕櫚木書架",
   "block.compatoplenty.palm_post": "棕櫚木桿",
-  "block.compatoplenty.stripped_palm_post": "去皮棕櫚木桿",
+  "block.compatoplenty.stripped_palm_post": "剝皮棕櫚木桿",
   "block.compatoplenty.palm_hedge": "棕櫚樹葉籬",
   "block.compatoplenty.palm_leaf_carpet": "棕櫚樹葉地毯",
   "block.compatoplenty.palm_leaf_pile": "棕櫚樹葉堆",
@@ -120,13 +120,13 @@
   "block.compatoplenty.palm_beehive": "棕櫚木蜂箱",
   "block.compatoplenty.palm_cabinet": "棕櫚木廚櫃",
   "block.compatoplenty.palm_table": "棕櫚木桌",
-  "block.compatoplenty.vertical_palm_planks": "豎紋棕櫚木板",
+  "block.compatoplenty.vertical_palm_planks": "豎紋棕櫚木材",
   "block.compatoplenty.palm_boards": "棕櫚直木板",
-  "block.compatoplenty.dead_vertical_slab": "枯死木豎直台階",
+  "block.compatoplenty.dead_vertical_slab": "枯死木豎直半磚",
   "block.compatoplenty.dead_ladder": "枯死木梯子",
   "block.compatoplenty.dead_bookshelf": "枯死木書架",
   "block.compatoplenty.dead_post": "枯死木桿",
-  "block.compatoplenty.stripped_dead_post": "去皮枯死木桿",
+  "block.compatoplenty.stripped_dead_post": "剝皮枯死木桿",
   "block.compatoplenty.dead_hedge": "枯死樹葉籬",
   "block.compatoplenty.dead_leaf_carpet": "枯死樹葉地毯",
   "block.compatoplenty.dead_leaf_pile": "枯死樹葉堆",
@@ -135,13 +135,13 @@
   "block.compatoplenty.dead_beehive": "枯死木蜂箱",
   "block.compatoplenty.dead_cabinet": "枯死木廚櫃",
   "block.compatoplenty.dead_table": "枯死木桌",
-  "block.compatoplenty.vertical_dead_planks": "豎紋枯死木板",
+  "block.compatoplenty.vertical_dead_planks": "豎紋枯死木材",
   "block.compatoplenty.dead_boards": "枯死直木板",
-  "block.compatoplenty.umbran_vertical_slab": "暗影木豎直台階",
+  "block.compatoplenty.umbran_vertical_slab": "暗影木豎直半磚",
   "block.compatoplenty.umbran_ladder": "暗影木梯子",
   "block.compatoplenty.umbran_bookshelf": "暗影木書架",
   "block.compatoplenty.umbran_post": "暗影木桿",
-  "block.compatoplenty.stripped_umbran_post": "去皮暗影木桿",
+  "block.compatoplenty.stripped_umbran_post": "剝皮暗影木桿",
   "block.compatoplenty.umbran_hedge": "暗影樹葉籬",
   "block.compatoplenty.umbran_leaf_carpet": "暗影樹葉地毯",
   "block.compatoplenty.umbran_leaf_pile": "暗影樹葉堆",
@@ -150,13 +150,13 @@
   "block.compatoplenty.umbran_beehive": "暗影木蜂箱",
   "block.compatoplenty.umbran_cabinet": "暗影木廚櫃",
   "block.compatoplenty.umbran_table": "暗影木桌",
-  "block.compatoplenty.vertical_umbran_planks": "豎紋暗影木板",
+  "block.compatoplenty.vertical_umbran_planks": "豎紋暗影木材",
   "block.compatoplenty.umbran_boards": "暗影直木板",
-  "block.compatoplenty.hellbark_vertical_slab": "地獄皮木豎直台階",
+  "block.compatoplenty.hellbark_vertical_slab": "地獄皮木豎直半磚",
   "block.compatoplenty.hellbark_ladder": "地獄皮木梯子",
   "block.compatoplenty.hellbark_bookshelf": "地獄皮木書架",
   "block.compatoplenty.hellbark_post": "地獄皮木桿",
-  "block.compatoplenty.stripped_hellbark_post": "去皮地獄皮木桿",
+  "block.compatoplenty.stripped_hellbark_post": "剝皮地獄皮木桿",
   "block.compatoplenty.hellbark_hedge": "地獄皮樹葉籬",
   "block.compatoplenty.hellbark_leaf_carpet": "地獄皮樹葉地毯",
   "block.compatoplenty.hellbark_leaf_pile": "地獄皮樹葉堆",
@@ -165,49 +165,49 @@
   "block.compatoplenty.hellbark_beehive": "地獄皮木蜂箱",
   "block.compatoplenty.hellbark_cabinet": "地獄皮木廚櫃",
   "block.compatoplenty.hellbark_table": "地獄皮木桌",
-  "block.compatoplenty.vertical_hellbark_planks": "豎紋地獄皮木板",
+  "block.compatoplenty.vertical_hellbark_planks": "豎紋地獄皮木材",
   "block.compatoplenty.hellbark_boards": "地獄皮直木板",
-  "block.compatoplenty.white_sandstone_vertical_slab": "白砂巖豎直台階",
-  "block.compatoplenty.cut_white_sandstone_vertical_slab": "切制白砂巖豎直台階",
-  "block.compatoplenty.smooth_white_sandstone_vertical_slab": "平滑白砂巖豎直台階",
-  "block.compatoplenty.white_sandstone_bricks": "白砂巖磚",
-  "block.compatoplenty.white_sandstone_brick_stairs": "白砂巖磚樓梯",
-  "block.compatoplenty.white_sandstone_brick_slab": "白砂巖磚台階",
-  "block.compatoplenty.white_sandstone_brick_wall": "白砂巖磚墻",
-  "block.compatoplenty.white_sandstone_brick_vertical_slab": "白砂巖磚豎直台階",
-  "block.compatoplenty.orange_sandstone_vertical_slab": "橙砂巖豎直台階",
-  "block.compatoplenty.cut_orange_sandstone_vertical_slab": "切制橙砂巖豎直台階",
-  "block.compatoplenty.smooth_orange_sandstone_vertical_slab": "平滑橙砂巖豎直台階",
-  "block.compatoplenty.orange_sandstone_bricks": "橙砂巖磚",
-  "block.compatoplenty.orange_sandstone_brick_stairs": "橙砂巖磚樓梯",
-  "block.compatoplenty.orange_sandstone_brick_slab": "橙砂巖磚台階",
-  "block.compatoplenty.orange_sandstone_brick_wall": "橙砂巖磚墻",
-  "block.compatoplenty.orange_sandstone_brick_vertical_slab": "橙砂巖磚豎直台階",
-  "block.compatoplenty.black_sandstone_vertical_slab": "黑砂巖豎直台階",
-  "block.compatoplenty.cut_black_sandstone_vertical_slab": "切制黑砂巖豎直台階",
-  "block.compatoplenty.smooth_black_sandstone_vertical_slab": "平滑黑砂巖豎直台階",
-  "block.compatoplenty.black_sandstone_bricks": "黑砂巖磚",
-  "block.compatoplenty.black_sandstone_brick_stairs": "黑砂巖磚樓梯",
-  "block.compatoplenty.black_sandstone_brick_slab": "黑砂巖磚台階",
-  "block.compatoplenty.black_sandstone_brick_wall": "黑砂巖磚墻",
-  "block.compatoplenty.black_sandstone_brick_vertical_slab": "黑砂巖磚豎直台階",
+  "block.compatoplenty.white_sandstone_vertical_slab": "白砂岩豎直半磚",
+  "block.compatoplenty.cut_white_sandstone_vertical_slab": "切製白砂岩豎直半磚",
+  "block.compatoplenty.smooth_white_sandstone_vertical_slab": "平滑白砂岩豎直半磚",
+  "block.compatoplenty.white_sandstone_bricks": "白砂岩磚",
+  "block.compatoplenty.white_sandstone_brick_stairs": "白砂岩磚樓梯",
+  "block.compatoplenty.white_sandstone_brick_slab": "白砂岩磚半磚",
+  "block.compatoplenty.white_sandstone_brick_wall": "白砂岩磚墻",
+  "block.compatoplenty.white_sandstone_brick_vertical_slab": "白砂岩磚豎直半磚",
+  "block.compatoplenty.orange_sandstone_vertical_slab": "橙砂岩豎直半磚",
+  "block.compatoplenty.cut_orange_sandstone_vertical_slab": "切製橙砂岩豎直半磚",
+  "block.compatoplenty.smooth_orange_sandstone_vertical_slab": "平滑橙砂岩豎直半磚",
+  "block.compatoplenty.orange_sandstone_bricks": "橙砂岩磚",
+  "block.compatoplenty.orange_sandstone_brick_stairs": "橙砂岩磚樓梯",
+  "block.compatoplenty.orange_sandstone_brick_slab": "橙砂岩磚半磚",
+  "block.compatoplenty.orange_sandstone_brick_wall": "橙砂岩磚墻",
+  "block.compatoplenty.orange_sandstone_brick_vertical_slab": "橙砂岩磚豎直半磚",
+  "block.compatoplenty.black_sandstone_vertical_slab": "黑砂岩豎直半磚",
+  "block.compatoplenty.cut_black_sandstone_vertical_slab": "切製黑砂岩豎直半磚",
+  "block.compatoplenty.smooth_black_sandstone_vertical_slab": "平滑黑砂岩豎直半磚",
+  "block.compatoplenty.black_sandstone_bricks": "黑砂岩磚",
+  "block.compatoplenty.black_sandstone_brick_stairs": "黑砂岩磚樓梯",
+  "block.compatoplenty.black_sandstone_brick_slab": "黑砂岩磚半磚",
+  "block.compatoplenty.black_sandstone_brick_wall": "黑砂岩磚墻",
+  "block.compatoplenty.black_sandstone_brick_vertical_slab": "黑砂岩磚豎直半磚",
   "item.compatoplenty.glowing_moss_paste": "熒光苔蘚泥",
   "block.compatoplenty.galanos_block": "熒藍塊",
   "block.compatoplenty.galanos_pillar": "熒藍柱",
   "block.compatoplenty.galanos_stairs": "熒藍樓梯",
-  "block.compatoplenty.galanos_slab": "熒藍台階",
-  "block.compatoplenty.galanos_vertical_slab": "熒藍豎直台階",
-  "block.compatoplenty.polished_rose_quartz": "磨制玫瑰石英塊",
-  "block.compatoplenty.polished_rose_quartz_stairs": "磨制玫瑰石英樓梯",
-  "block.compatoplenty.polished_rose_quartz_slab": "磨制玫瑰石英台階",
-  "block.compatoplenty.polished_rose_quartz_vertical_slab": "磨制玫瑰石英豎直台階",
-  "block.compatoplenty.chiseled_polished_rose_quartz": "鏨制磨制玫瑰石英塊",
-  "block.compatoplenty.polished_rose_quartz_bricks": "磨制玫瑰石英磚",
-  "block.compatoplenty.polished_rose_quartz_brick_stairs": "磨制玫瑰石英磚樓梯",
-  "block.compatoplenty.polished_rose_quartz_brick_slab": "磨制玫瑰石英磚台階",
-  "block.compatoplenty.polished_rose_quartz_brick_vertical_slab": "磨制玫瑰石英磚豎直台階",
-  "block.compatoplenty.polished_rose_quartz_brick_wall": "磨制玫瑰石英磚墻",
-  "block.compatoplenty.cracked_polished_rose_quartz_bricks": "裂紋磨制玫瑰石英磚",
+  "block.compatoplenty.galanos_slab": "熒藍半磚",
+  "block.compatoplenty.galanos_vertical_slab": "熒藍豎直半磚",
+  "block.compatoplenty.polished_rose_quartz": "磨製玫瑰石英塊",
+  "block.compatoplenty.polished_rose_quartz_stairs": "磨製玫瑰石英樓梯",
+  "block.compatoplenty.polished_rose_quartz_slab": "磨製玫瑰石英半磚",
+  "block.compatoplenty.polished_rose_quartz_vertical_slab": "磨製玫瑰石英豎直半磚",
+  "block.compatoplenty.chiseled_polished_rose_quartz": "鏨製磨製玫瑰石英塊",
+  "block.compatoplenty.polished_rose_quartz_bricks": "磨製玫瑰石英磚",
+  "block.compatoplenty.polished_rose_quartz_brick_stairs": "磨製玫瑰石英磚樓梯",
+  "block.compatoplenty.polished_rose_quartz_brick_slab": "磨製玫瑰石英磚半磚",
+  "block.compatoplenty.polished_rose_quartz_brick_vertical_slab": "磨製玫瑰石英磚豎直半磚",
+  "block.compatoplenty.polished_rose_quartz_brick_wall": "磨製玫瑰石英磚墻",
+  "block.compatoplenty.cracked_polished_rose_quartz_bricks": "裂紋磨製玫瑰石英磚",
   "block.compatoplenty.flowering_oak_leaf_carpet": "花橡樹葉地毯",
   "block.compatoplenty.flowering_oak_leaf_pile": "花橡樹葉堆",
   "block.compatoplenty.flowering_oak_hedge": "花橡樹葉籬",
@@ -226,7 +226,7 @@
   "block.compatoplenty.yellow_autumn_leaf_carpet": "黃秋樹葉地毯",
   "block.compatoplenty.yellow_autumn_leaf_pile": "黃秋樹葉堆",
   "block.compatoplenty.yellow_autumn_hedge": "黃秋樹葉籬",
-  "block.compatoplenty.mud_brick_vertical_slab": "泥磚豎直台階",
+  "block.compatoplenty.mud_brick_vertical_slab": "泥磚豎直半磚",
   "item.compatoplenty.cherry_chest_boat": "櫻桃木運輸船",
   "item.compatoplenty.cherry_furnace_boat": "櫻桃木動力船",
   "item.compatoplenty.large_cherry_boat": "櫻桃木大型船",
